OpenAI tests